--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,9 @@ bytes = "1.4.0"
 chrono = "0.4.24"
 dashmap = "5.4.0"
 once_cell = "1.17.1"
-serde = "1.0.160"
-serde_derive = "1.0.160"
+serde = "1.0.162"
+serde_derive = "1.0.162"
 
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.10.1"}
+maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.10.3"}
 # maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.6.0"}
-seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", branch = "main"}
+seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.8.2"}
