--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tokio = {version = "1.28.0", features = ["full"]}
 
 ahash = "0.8.3"
 anyhow = "1.0.71"
+atomptr = "1.3.0"
 bincode = "1.3.3"
 bytes = "1.4.0"
 chrono = "0.4.24"
@@ -24,6 +25,7 @@ once_cell = "1.17.1"
 serde = "1.0.162"
 serde_derive = "1.0.162"
 
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.10.3"}
-# maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.6.0"}
-seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.8.2"}
+maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.10.8"}
+maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.9.0"}
+# maxwell-utils = {path = "../../maxwell-utils-impls/maxwell-utils-rust"}
+seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.9.2"}
