--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,26 +6,27 @@ version = "0.5.0"
 
 [dependencies]
 config = "0.13.3"
-log = "0.4.17"
+log = "0.4.19"
 log4rs = "1.2.0"
 
 actix = "0.13.0"
 actix-web = "4.3.1"
 actix-web-actors = "4.2.0"
-tokio = {version = "1.28.0", features = ["full"]}
+tokio = {version = "1.28.2", features = ["full"]}
 
 ahash = "0.8.3"
 anyhow = "1.0.71"
 atomptr = "1.3.0"
 bincode = "1.3.3"
 bytes = "1.4.0"
-chrono = "0.4.24"
+chrono = "0.4.26"
 dashmap = "5.4.0"
-once_cell = "1.17.1"
-serde = "1.0.162"
-serde_derive = "1.0.162"
+once_cell = "1.18.0"
+quick_cache = "0.3.0"
+serde = "1.0.164"
+serde_derive = "1.0.164"
 
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.10.8"}
-maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.9.0"}
+maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.11.0"}
+maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.9.1"}
 # maxwell-utils = {path = "../../maxwell-utils-impls/maxwell-utils-rust"}
 seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.9.2"}
