--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,28 +6,29 @@ version = "0.5.0"
 
 [dependencies]
 config = "0.13.3"
-log = "0.4.19"
+log = "0.4.20"
 log4rs = "1.2.0"
 
 actix = "0.13.0"
 actix-cors = "0.6.4"
 actix-web = "4.3.1"
 actix-web-actors = "4.2.0"
-tokio = {version = "1.28.2", features = ["full"]}
+tokio = {version = "1.32.0", features = ["full"]}
 
 ahash = "0.8.3"
-anyhow = "1.0.71"
+anyhow = "1.0.75"
 atomptr = "1.3.0"
 bincode = "1.3.3"
 bytes = "1.4.0"
 chrono = "0.4.26"
-dashmap = "5.4.0"
+dashmap = "5.5.1"
 once_cell = "1.18.0"
 quick_cache = "0.3.0"
-serde = "1.0.164"
-serde_derive = "1.0.164"
+rand = "0.8.5"
+serde = "1.0.185"
+serde_derive = "1.0.185"
 
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.11.0"}
-maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.9.1"}
+maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.12.2"}
+maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.9.10"}
 # maxwell-utils = {path = "../../maxwell-utils-impls/maxwell-utils-rust"}
 seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.9.2"}
