--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,26 +9,27 @@ config = "0.13.3"
 log = "0.4.20"
 log4rs = "1.2.0"
 
-actix = "0.13.0"
+actix = "0.13.1"
 actix-cors = "0.6.4"
-actix-web = "4.3.1"
+actix-web = {version = "4.4.0", features = ["rustls-0_21"]}
 actix-web-actors = "4.2.0"
+futures = "0.3.28"
+rustls = "0.21.7"
+rustls-pemfile = "1.0.3"
 tokio = {version = "1.32.0", features = ["full"]}
 
 ahash = "0.8.3"
 anyhow = "1.0.75"
-atomptr = "1.3.0"
 bincode = "1.3.3"
 bytes = "1.4.0"
-chrono = "0.4.26"
-dashmap = "5.5.1"
+chrono = "0.4.28"
+crc32fast = "1.3.2"
+dashmap = "5.5.3"
 once_cell = "1.18.0"
-quick_cache = "0.3.0"
+quick_cache = "0.4.0"
 rand = "0.8.5"
-serde = "1.0.185"
-serde_derive = "1.0.185"
+serde = "1.0.188"
+serde_derive = "1.0.188"
 
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.13.1"}
-maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.9.12"}
-# maxwell-utils = {path = "../../maxwell-utils-impls/maxwell-utils-rust"}
-seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.9.2"}
+maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.15.2"}
+seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.9.5"}
