--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
 edition = "2021"
 name = "maxwell-master"
-version = "0.9.5"
+version = "0.10.0"
 
 [dependencies]
 config = "0.14.0"
@@ -28,8 +28,8 @@ dashmap = "6.1.0"
 once_cell = "1.19.0"
 quick_cache = "0.6.6"
 rand = "0.8.5"
-serde = "1.0.210"
+serde = {version = "1.0.210"}
 serde_derive = "1.0.210"
 seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.11.2"}
 
-maxwell-protocol = "0.24.3"
+maxwell-protocol = "0.25.0"
